--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "scripts": {
-    "start": "webpack-dev-server --port 7000 --hot --inline",
+    "start": "webpack-dev-server --hot --inline",
     "build": "webpack"
   },
   "dependencies": {
     "dat-gui": "^0.5.0",
+    "gl-matrix": "^2.3.2",
     "stats-js": "^1.0.0-alpha1",
     "three": "^0.82.1",
     "three-orbit-controls": "^72.0.0"
