--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "dat-gui": "^0.5.0",
+    "stats-js": "^1.0.0-alpha1",
     "three": "^0.82.1",
     "three-orbit-controls": "^72.0.0"
   },
