--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "scripts": {
     "start": "webpack-dev-server --hot --inline",
-    "build": "webpack"
+    "build": "webpack",
+    "deploy": "gh-pages-deploy"
+  },
+  "gh-pages-deploy": {
+    "prep": [
+      "build"
+    ],
+    "noprompt": true
   },
   "dependencies": {
     "dat-gui": "^0.5.0",
@@ -15,6 +22,7 @@
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "css-loader": "^0.25.0",
+    "gh-pages-deploy": "^0.4.2",
     "html-loader": "^0.4.4",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
